[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "weechat_relay"
version = "0.1.0"

[dependencies]
byteorder = "1.1.0"
error-chain = "0.11.0-rc.2"
hexdump = "0.1.0"
libflate = "0.1.11"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
typemap = "0.3.3"

[dependencies.futures-await]
git = "https://github.com/alexcrichton/futures-await"
rev = "095a3583"

[dev-dependencies]
maplit = "0.1.4"
